--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,20 @@
+*{
+	box-sizing: border-box;
+}
+html, body {
+	margin: 0;
+	padding: 0;
+    font-family: sans-serif;
+}
+
+.form-wrapper {
+	display: block;
+	margin: 20px;
+}
+.song-wrapper {
+	display: inline-block;
+	margin: 10px;
+	padding: 10px;
+	border: 1px solid #666;
+}
 
