--- a/section-2/assets/css/style.css
+++ b/section-2/assets/css/style.css
@@ -7,14 +7,28 @@ html, body {
     font-family: sans-serif;
 }
 
+form {
+	max-width: 300px;
+	padding: 10px 20px;
+	margin: 10px auto;
+
+}
+
+input, textarea{
+  height: auto;
+  margin: 0;
+  width: 100%;
+
+}
+
 .form-wrapper {
 	display: block;
 	margin: 20px;
 }
 .song-wrapper {
 	display: inline-block;
-	margin: 10px;
-	padding: 10px;
+	margin: auto 20px ;
+	padding: 20px;
 	border: 1px solid #666;
 }
 
